( executable
  ( name
      main
  )
  ( libraries
      ; user libraries
      stdlib2 smyth

      ; opam libraries
      bark
  )
  ( flags
      ; (-open Pervasives2)
      (-open Pervasives2 -w +a-4-9-42-48 -warn-error -a+1..66-3-33)
  )
  ( ocamlopt_flags
      (-O3)
  )
  ( preprocess
      (pps ppx_deriving_yojson)
  )
)
